Changed how values for function bodies are handled. Now they are a property of the region and are seeded separately. This way values are managed more in line with their semantics.